--- a/parts/appwizard/kscreensaver/kscreensaverui.ui
+++ b/parts/appwizard/kscreensaver/kscreensaverui.ui
@@ -66,7 +66,7 @@
                             <cstring>OkayPushButton</cstring>
                         </property>
                         <property name="text">
-                            <string>&amp;Okay</string>
+                            <string>&amp;OK</string>
                         </property>
                     </widget>
                     <widget class="QPushButton">
