CVS_SILENT Corrected typographical errors
When replying, please CC me - I'm not subscribed

--- a/parts/distpart/distpart_ui.ui
+++ b/parts/distpart/distpart_ui.ui
@@ -230,8 +230,8 @@
                                                 </property>
                                                 <property name="text">
                                                     <string>&lt;b&gt;Archive name format: &lt;/b&gt;&lt;br&gt;
-%n - File name &lt;BR&gt;
-%v - File version &lt;BR&gt;
+%n - File name &lt;br&gt;
+%v - File version &lt;br&gt;
 %d - Date of archive</string>
                                                 </property>
                                             </widget>
